substrate/frame/support/test/tests/construct_runtime_ui/use_undefined_part.stderr
error: Invalid pallet part specified, the pallet `Pallet` doesn't have the `Call` part. Available parts are: `Pallet`, `Storage`.
  --> tests/construct_runtime_ui/use_undefined_part.rs:48:30
   |
48 |         Pallet: pallet use_parts { Call },
   |                                    ^^^^

error[E0412]: cannot find type `RuntimeCall` in this scope
  --> tests/construct_runtime_ui/use_undefined_part.rs:40:64
   |
40 | pub type UncheckedExtrinsic = generic::UncheckedExtrinsic<u32, RuntimeCall, Signature, ()>;
   |                                                                ^^^^^^^^^^^ not found in this scope
   |
help: you might be missing a type parameter
   |
40 | pub type UncheckedExtrinsic<RuntimeCall> = generic::UncheckedExtrinsic<u32, RuntimeCall, Signature, ()>;
   |                            +++++++++++++

error[E0412]: cannot find type `Runtime` in this scope
  --> tests/construct_runtime_ui/use_undefined_part.rs:42:25
   |
42 | impl pallet::Config for Runtime {}
   |                         ^^^^^^^ not found in this scope
